--- a/html-calmaria-spa-aula02/index.html
+++ b/html-calmaria-spa-aula02/index.html
@@ -122,7 +122,7 @@
                 <img src="./assets/contato-img-3.png"
                     alt="Mulher em uma banheira com pétalas de rosa, com apenas mãos e pernas aparentes, segurando um livro e com uma bandeija com uvas e chá.">
             </div>
-            <div action="." class="container__contato--form">
+            <form action="." class="container__contato--form">
                 <div class="container__contato--form-conteudo">
                     <h5 class="container__contato--form-conteudo-titulo">Entre em contato</h5>
                     <p class="container__contato--form-conteudo-texto">Reserve seu horário, tire dúvidas ou proponha
@@ -131,34 +131,34 @@
                         você!</p>
                 </div>
                 <div class="container__contato--inputs">
-                    <label>Nome</label>
-                    <input type="text">
-                    <label>Email</label>
-                    <input type="email">
-                    <label>Telefone</label>
-                    <input type="text">
-                    <div>
-                        <p class="container__contato--inputs--titulo">Prefere contato por:</p>
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" placeholder="digite seu nome completo" name="nome" required>
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="digite seu email" id="email" name="email" required>
+                    <label for="telefone">Telefone</label>
+                    <input type="text" placeholder="(XX) XXXX-XXXXX" id="telefone" name="telefone" required>
+                    <fieldset>
+                        <legend class="container__contato--inputs--titulo">Prefere contato por:</legend>
                         <div class="container__contato--inputs--div">
                             <div>
-                                <input type="radio">
+                                <input type="radio" id="ligacao" name="ligacao">
                                 <label>Ligação</label>
                             </div>
                             <div>
-                                <input type="radio">
+                                <input type="radio" id="whatsapp" name="whatsapp">
                                 <label>WhatsApp</label>
                             </div>
                             <div>
-                                <input type="radio">
+                                <input type="radio" id="email-contato" name="email-contato">
                                 <label>Email</label>
                             </div>
                         </div>
-                    </div>
-                    <label>Mensagem</label>
-                    <textarea type="text"></textarea>
+                    </fieldset>
+                    <label for="mensagem">Mensagem</label>
+                    <textarea type="text" placeholder="digite seu email" id="mensagem" name="mensagem"></textarea>
                 </div>
                 <button>Enviar</button>
-            </div>
+            </form>
         </section>
     </main>
 
