--- a/html-calmaria-spa-aula02/index.html
+++ b/html-calmaria-spa-aula02/index.html
@@ -25,7 +25,7 @@
 
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a href="#">
+            <a href="#" aria-label="acessar calmaria spa">
                 <img class="cabecalho__nav--logo" src="./assets/logo.png" alt="Logo da Calmaria Spa">
             </a>
             <span class="cabecalho__nav--line"></span>
@@ -166,9 +166,9 @@
         <address>
             Acesse nossas redes:<br>
             <ul class="rodape__nav--lista">
-                <li><a href="#" class="rodape__nav--lista--whatsapp"></a></li>
-                <li><a href="#" class="rodape__nav--lista--instagram"></a></li>
-                <li><a href="#" class="rodape__nav--lista--tiktok"></a></li>
+                <li><a href="#" aria-label="whatsapp da calmaria spa" class="rodape__nav--lista--whatsapp"></a></li>
+                <li><a href="#" aria-label="instagram da calmaria spa" class="rodape__nav--lista--instagram"></a></li>
+                <li><a href="#" aria-label="tiktok da calmaria spa" class="rodape__nav--lista--tiktok"></a></li>
             </ul>
             <small>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</small>
         </address>
